nginx/newdeployment.yml
kind: Deployment
apiVersion: apps/v1
  metadata:
    name: sql-deployment
    namespace: database
spec:
